I think it's done, just do some more testing but any problems I've had I haven't been able to reproduce

--- a/app/src/main/res/layout/game_view.xml
+++ b/app/src/main/res/layout/game_view.xml
@@ -19,8 +19,8 @@
 
     <Button
         android:id="@+id/exit_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginBottom="8dp"
@@ -31,6 +31,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/texture_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/end_screen"
+        android:textColor="@color/white"/>
 
 </android.support.constraint.ConstraintLayout>
